# dotfile

./: Cargo.toml  dotfile.yaml  readme.md
src/: cli.rs  cli.yaml  config.rs  error.rs  main.rs
src/config/: dotfile.rs  global.rs  local.rs  mod.rs
src/subcommands/: add.rs  group.rs  init.rs  install.rs  mod.rs  remove.rs  use_cmd.rs
