[package]
name = "dotfile"
version = "0.1.0"
authors = ["Edward Shen <code@eddie.sh>"]
edition = "2018"

description = "Dotfile manager and package installer"
repository = "https://github.com/edward-shen/dotfile"
readme = "readme.md"

license = "GPL3"
keywords = ["dotfile", "manager", "package", "arch", "linux"]
categories = ["command-line-utilities", "config", "filesystem"]


[dependencies]
cursive = "0.14.0"
cursive_tree_view = "0.6.0"
dirs = "1.0.4"
serde_yaml = "0.8"
serde = {version = "1.0", features = ["derive"]}
clap = { git = "https://github.com/clap-rs/clap/" }